# projetoPreguica

./: README.md  app.py  pyproject.toml  utilidades.py
JavaScript/: login.js
autenticacao/: autenticacao_dao.py  autenticacao_service.py  routes.py
static/: anuncio.css  blabla.css  carrosusr.css  home.css  perfil.css  styleL.css  styleR.css  venda.css
static/css/: styleR.css
templates/: anuncio.html  carrosanun.html  footer.html  home.html  login.html  modelo.html  perfil.html  registro.html  venda.html
