[tool.poetry]
name = "grupo2"
version = "0.1.0"
description = ""
authors = ["Ednaldo Dilorenzo <ednaldo.dilorenzo@alayacare.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask="^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
